[gd_scene load_steps=4 format=3 uid="uid://by0wrcdaaqjrh"]

[ext_resource type="Script" path="res://scenes/UI/Stations/Trawl/TrawlUI.gd" id="1_ty3hc"]
[ext_resource type="Texture2D" uid="uid://d2q84r70ugjuc" path="res://assets/UI/ui_joystick_outer.png" id="2_7twrp"]
[ext_resource type="Texture2D" uid="uid://dl78qhy22t63y" path="res://assets/UI/ui_joystick_inner.png" id="3_hxobw"]

[node name="TrawlUI" type="Control"]
z_index = 15
layout_mode = 3
anchors_preset = 0
offset_right = 64.0
offset_bottom = 32.0
script = ExtResource("1_ty3hc")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
columns = 2

[node name="LeftContainer" type="HBoxContainer" parent="Panel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Control" type="Control" parent="Panel/VBoxContainer/GridContainer/LeftContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2

[node name="OuterCircle" type="TextureRect" parent="Panel/VBoxContainer/GridContainer/LeftContainer/Control"]
texture_filter = 1
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
offset_right = 20.0
offset_bottom = 20.0
texture = ExtResource("2_7twrp")
expand_mode = 1
stretch_mode = 2

[node name="InnerCircle" type="TextureRect" parent="Panel/VBoxContainer/GridContainer/LeftContainer/Control"]
texture_filter = 1
layout_mode = 2
offset_left = 8.0
offset_top = 8.0
offset_right = 12.0
offset_bottom = 12.0
texture = ExtResource("3_hxobw")
expand_mode = 1
stretch_mode = 2

[node name="RightContainer" type="HBoxContainer" parent="Panel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Control" type="Control" parent="Panel/VBoxContainer/GridContainer/RightContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2

[node name="OuterCircle" type="TextureRect" parent="Panel/VBoxContainer/GridContainer/RightContainer/Control"]
texture_filter = 1
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
offset_right = 20.0
offset_bottom = 20.0
texture = ExtResource("2_7twrp")
expand_mode = 1
stretch_mode = 2

[node name="InnerCircle" type="TextureRect" parent="Panel/VBoxContainer/GridContainer/RightContainer/Control"]
texture_filter = 1
layout_mode = 2
offset_left = 8.0
offset_top = 8.0
offset_right = 12.0
offset_bottom = 12.0
texture = ExtResource("3_hxobw")
expand_mode = 1
stretch_mode = 2
